# qr-code-gen

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: flag_parse.hpp  image_writer.hpp
src/: flag_parse.cpp  flag_parse.hpp  image_writer.cpp  main.cpp
